--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="House Market is a Web site that helps people sell or rent their houses"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
@@ -18,7 +18,7 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-    <title>React App</title>
+    <title>House Market</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
